fix race box height so avatars are not cut off (#125)
* fix race box height so avatars are not cut off

* removed commented out code

--- a/styles/layout/containers.scss
+++ b/styles/layout/containers.scss
@@ -34,7 +34,7 @@
 .avatarContainer {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   margin: 0 0.5rem;
   min-width: 5rem;
